--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,12 @@
 			<groupId>com.google.testing.compile</groupId>
 			<artifactId>compile-testing</artifactId>
 			<version>0.13</version>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.google.auto.service</groupId>
 			<artifactId>auto-service</artifactId>
 			<version>1.0-rc3</version>
-			<scope>provided</scope>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
